--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input:focus {
+  outline: none !important;
+  border:2px solid #E85467;
+  box-shadow: 0 0 10px #E85467;
+}
+input{
+  border-radius: 7px;
+  border: 2px solid #E85467;
+  font-size: 1rem;
+}
